# autocut

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  summary.srt  summary.txt
.claude/: settings.local.json
output/: transcript.srt  transcript.txt
src/: cli.rs  main.rs
src/core/: crop.rs  engine.rs  llm.rs  mod.rs  operations.rs  summarize.rs  timestamp.rs  transcribe.rs  types.rs  validation.rs
tests/: integration_tests.rs
