[package]
name = "clip-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clip-cli"
path = "src/main.rs"

[dependencies]
ffmpeg-next = "8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
whisper-rs = "0.13"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
